--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
     <!-- fancy box jquery file -->
     <script src=" https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js "></script>
     <!-- Owl Carousel JS file -->
-    <script src=" JS/owl.carousel.min.js "></script>
+    <script src=" js/owl.carousel.min.js "></script>
 
     <!-- Main JS file -->
-    <script src=" JS/main.js "></script>
+    <script src=" js/main.js "></script>
 </body>
 
 
